# WallhavenAPI

./: README.md  pyproject.toml  requirements-tests.txt
.github/workflows/: build-publish-release.yml  test-tag.yml
coverage/: index.html
coverage/latest/: class_index.html  function_index.html  index.html  status.json  z_37a4a47526ce376d___init___py.html  z_37a4a47526ce376d_wallhavenapi_py.html
tests/: test_wallhavenapi.py
wallhavenapi/: __init__.py  wallhavenapi.py
